@@ -1,4 +1,5 @@
 
+	* fix issue resuming 1.0.x downloads with a file priority 0
 	* use unique peer_ids per connection
 	* fix iOS build on recent SDK
 	* fix tracker connection bind issue for IPv6 trackers
